k8s/item-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-db
  template:
    metadata:
      labels:
        app: item-db
    spec:
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
              subPath: postgres
