k8s/item-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: item-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-service
  template:
    metadata:
      labels:
        app: item-service
    spec:
      containers:
        - name: item-service
          image: conradpacesa/item-service
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 50051
