k8s/api-gateway-cluser-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: api-gw
  ports:
    - port: 8080
      targetPort: 8080
