k8s/item-db-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-db-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: item-db
  ports:
    - port: 5432
      targetPort: 5432
