k8s/item-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: item-service
  ports:
    - port: 50051
      targetPort: 50051
